<resources>
    <string name="app_name">SannaCodeTestTask</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kyiv">Kyiv</string>
    <string name="houston">Houston</string>
    <string name="galveston">Galveston</string>
    <string name="boston">Boston</string>
    <string name="miami">Miami</string>
    <string name="error_occured">Error occured</string>
    <string name="please_try_later">Please, try later</string>
    <string name="ok">Ok</string>
    <string name="failed_retrieve_data">Failed retrieving an actual forecast</string>
    <string name="wanna_go_to_settings">Looks like network connection is not configured. Would you like to do it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="summmary">Summary: %s</string>
    <string name="humidity">Humidity %f</string>
    <string name="pressure">Pressure %f</string>
    <string name="wind">Wind speed %f</string>
    <string name="temperature">Temperature %f</string>
    <string name="last_sync">Last sync: %s</string>
    <string name="time">Time</string>
    <string name="temperature_">Temperature</string>
    <string name="pressure_">Pressure</string>
    <string name="humidity_">Humidity</string>
    <string name="wind_">Wind speed</string>
    <string name="precip">Precipitation probability</string>
</resources>
