<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.example.ivstk.sannacodetesttask.ItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ItemFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/raw_height"
                android:layout_marginBottom="@dimen/raw_height"
                android:gravity="center_vertical"
                android:text="@string/time" />

            <TextView

                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/raw_height"
                android:layout_marginBottom="@dimen/raw_height"
                android:gravity="center_vertical"
                android:text="@string/temperature_" />

            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/raw_height"
                android:layout_marginBottom="@dimen/raw_height"
                android:gravity="center_vertical"
                android:text="@string/pressure_" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/raw_height"
                android:layout_marginBottom="@dimen/raw_height"
                android:gravity="center_vertical"
                android:text="@string/humidity_" />

            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/raw_height"
                android:layout_marginBottom="@dimen/raw_height"
                android:gravity="center_vertical"
                android:text="@string/wind_" />

            <TextView
                android:id="@+id/tvPrecipProbability"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/raw_height"
                android:layout_marginBottom="@dimen/raw_height"
                android:gravity="center_vertical"
                android:text="@string/precip" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</android.support.v4.widget.NestedScrollView>