<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="80dp"
    android:paddingTop="26dp">


    <TextView
        android:id="@+id/tvHumidity"
        style="@style/HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        app:layout_constraintEnd_toStartOf="@+id/tvTemperature"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

    <TextView
        android:id="@+id/tvPressure"
        style="@style/HeaderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTemperature"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

    <TextView
        android:id="@+id/tvWindSpeed"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTempDegrees" />

    <TextView
        android:id="@+id/tvTemperature"
        style="@style/LargeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/temperature"
        app:layout_constraintEnd_toStartOf="@+id/tvPressure"
        app:layout_constraintStart_toEndOf="@+id/tvHumidity"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />


    <TextView
        android:id="@+id/tvTempDegrees"
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperature"
        tools:text="243" />

    <TextView
        android:id="@+id/tvLastSync"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_sync"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTempDegrees" />

    <TextView
        android:id="@+id/tvSummary"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>